# BioHasher

./: .gitignore  CMakeLists.txt  README.md  TODO.md  codesnippets truncated  commands.sh  createHashTemplate.md  createHashTemplate.py  environment.yaml  housekeeping.cpp  housekeeping.h  main.cpp  main_copy.cpp  out  requirements.txt  testing.sh  testing_d.sh  version.cmake  version.h.in
analysis/: analysisplots.ipynb  dashboard_template.html  generate_report.py  lsh.ipynb  main.py  plot.py  plotANNroc.py  plot_ANN.py  plot_ann.py  plot_collision_results.py  plot_collisioncurve.py  plot_collisioncurve_plotly.py  plot_collisioncurves.py  plot_lsh_results.py  plots.ipynb  webplotter.py
analysis/python notebooks/: analysisplots.ipynb  lsh.ipynb  plot.py  plots.ipynb
analysis/python_notebooks/: analysisplots.ipynb  cleananalysisplots.ipynb
documentation/: ApproximateNearestNeighbour.md  Collisiontest.md  MutationModels.md  createHashTemplate.md
documentation-deprecated/: ApproximateNearestNeighbour.md  Collisiontest.md
documents/: ANDORtest.md  ANNtest.md  createHashTemplate.md
documents/tests/: README_LSHCollisionTest.md
extras/: extractbits.cpp  randomnumgen.cpp  seekable_rng.cpp  temp3.cpp  temp4.cpp
extras/documents/: LSHCollisionTest_Documentation.aux  LSHCollisionTest_Documentation.out  LSHCollisionTest_Documentation.tex  LSHCollisionTest_Documentation.toc
hashes/: EXAMPLE_TEMPLATE.cpp  Hashrefs.cpp.in  Hashsrc.cmake  donothing.cpp  examplehash.cpp  fnv.cpp  hamming.cpp  minhash-edit.cpp  minhash.cpp  onebasesamplinghash.cpp  simhash-ang.cpp  simhash-deprecatedLogic.cpp  simhash.cpp
hashes/ssh1/: ssh1.cpp
hashes/subseqhash1/: ssh1.cpp  ssh1_old.cpp  subseqhash1.cpp
include/common/: Hashinfo.h  LSHGlobals.h
lib/: BioDataGeneration.cpp  BioDataGeneration.h  Blob.h  HashInfo.cpp  HashInfo.h  Hashlib.cpp  Hashlib.h  LSHGlobals.cpp  LSHGlobals.h  Mathmult.cpp  Mathmult.h  TestGlobals.h  assertMsg.h  coolstuff.h  similarities.cpp  similarities.h  smhasher3Random.cpp  smhasher3Random.h  specifics.cpp  specifics.h  stats.cpp  timings.h
results/: ApproxNearestNeighbourResults_SubseqHash-64.csv  LICENSE  collisionResults_Hamming-32-base-seq.csv  collisionResults_Hamming-32-encoded-seq.csv  collisionResults_MinHash-32-bitwise.csv  collisionResults_MinHash-32-encoded-set.csv  collisionResults_MinHash-32-encoded.csv  collisionResults_MinHash-32.csv  collisionResults_OneBaseSamplingHash-32.csv  collisionResults_SimHash-32-bitwise.csv  collisionResults_SimHash-Ang-32-BACKUP.csv  collisionResults_SimHash-Ang-32.csv  collisionResults_SimHash-Cos-32.csv  collisionResults_SubseqHash-64-BACKUP.csv  collisionResults_SubseqHash-64-BACKUP2.csv  collisionResults_SubseqHash-64-andor.csv  collisionResults_SubseqHash-64-main.csv  collisionResults_SubseqHash-64-multimutations.csv  collisionResults_SubseqHash-64.csv  collisionResults_SubseqHash-64ANDOR-BCKUP.csv  collisionResults_SubseqHash-64ANDOR.csv  collisionResults_XXH3-64.csv
results/SubseqHash-64-ann/: SubseqHash-64_processed.csv
results/SubseqHash-64-col-main/: SubseqHash-64_processed.csv
results/SubseqHash-64-col-multimutations/: SubseqHash-64_processed.csv
results/backupresults/: collisionResults_MinHash-32-bitwise.csv  collisionResults_MinHash-32-encoded-seq.csv  collisionResults_OneBaseSamplingHash-32.csv  collisionResults_SimHash-32-bitwise.csv  collisionResults_SimHash-32-encoded.csv  collisionResults_SimHash-32.csv  collisionResults_XXH-32.csv
tests/: ApproxNearestNeighbour.cpp  ApproxNearestNeighbour.h  ApproxNearestNeighbourTest.cpp  ApproxNearestNeighbourTest.h  LSHCollision.cpp  LSHCollision.h  LSHCollisionAndOrTest.cpp  LSHCollisionAndOrTest.h  LSHCollisionTest.cpp  LSHCollisionTest.h  LSHCollisionTestAutoDist.cpp  LSHCollisionTestAutoDist.h  gmon.out  new.prompt.prompt.md
util/: BioDataGeneration.cpp  BioDataGeneration.h  LSHGlobals.cpp  distances.cpp  distances.h
